add | alpaca-lora LLAMA + LORA-PEFT
added original and custom llama finetuning scripts from alpaca-lora repo

--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,15 @@
 .venv/
+out/
+7B/
+13B/
+__pycache__/
+checkpoint**
+minimal-llama**
+upload.py
+lora-**
+*ckpt
+wandb
+evaluate.py
+test_data.json
+todo.txt
+.vscode
