--- a/benchmark/run_configs/dblp/original/codellama13b-config.yaml
+++ b/benchmark/run_configs/dblp/original/codellama13b-config.yaml
@@ -1,29 +1,30 @@
-kgname: yago
+kgname: dblp
 temperature: 0.5
 kghost: localhost
 kgport: 8894
 redishost: localhost
-outputdir: ./results/yago-ss
-dataset_size: 5
+outputdir: ./results/mar28/dblp/original/codellama-13b
+dataset_size: 20
 dialogue_size: 5
 approach: 
   - subgraph-summarized
   # - subgraph
-pipeline_type: simplified
+pipeline_type: original
+# pipeline_type: simplified
 question_generation_model:
   model_type: "openllm"
   model_name: "codellama-13b"
-  model_endpoint: "http://localhost:3306"
+  model_endpoint: "http://localhost:9998"
   model_apikey: ""
 sparql_generation_model:
   model_type: "openllm"
   model_name: "codellama-13b"
-  model_endpoint: "http://localhost:3306"
+  model_endpoint: "http://localhost:9998"
   model_apikey: ""
 dialogue_generation_model:
   model_type: "openllm"
   model_name: "codellama-13b"
-  model_endpoint: "http://localhost:3306"
+  model_endpoint: "http://localhost:9998"
   model_apikey: ""
 prompt: 1
 use_label: true
