singleshot prompt update

--- a/.gitignore
+++ b/.gitignore
@@ -22,3 +22,11 @@ benchmark/*.log
 not_to_push/
 index_data/
 *.jsonl
+benchmark/logs
+benchmark/appendonlydir
+benchmark/results
+*.rdb
+*.csv
+.flake8
+*.tiktoken
+benchmark/run_configs
