--- a/.gitignore
+++ b/.gitignore
@@ -19,6 +19,10 @@ todo.txt
 .vscode
 benchmark/traces/
 benchmark/*.log
+benchmark/old
 not_to_push/
 index_data/
 *.jsonl
+evaluations/
+LLMs/
+lcquad_utils/
